# FlightControl

./: .gitignore  CMakeLists.txt  FlightControl.cpp  README.md  Sketch.fzz
cmake/Platform/: Arduino.cmake
src/: ConfigData.cpp  ConfigData.h  ControlData.cpp  ControlData.h  CopterSpeed.cpp  CopterSpeed.h  Gyroscope.cpp  Gyroscope.h  Gyroscope_new.cpp  Gyroscope_new.h  MotorControl.cpp  MotorControl.h  PIDController.cpp  PIDController.h  RemoteControl.cpp  RemoteControl.h  Rotation.cpp  Rotation.h
